Fix textarea inline form. - having a wrapper with form-inline class must auto align all fields in a single profile row. http://getbootstrap.com/css/#forms-inline

--- a/themes/templates/default.css
+++ b/themes/templates/default.css
@@ -240,11 +240,6 @@
     transition: all 0.2s ease-in-out;
 }
 
-/* decoratives */
-.form-group {
-    display: inline-block;
-}
-
 .no-shadow {
     -webkit-box-shadow: none !important;
     -moz-box-shadow: none !important;
